[package]
name = "market-io"
version = "2.0.0"
edition = "2023"
license = "MIT"
authors = ["Sergio Gil"]

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.10" }
